@@ -1385,6 +1385,12 @@ Sat Mar 29 22:03:16 CET 2003
 Sun Mar 30 13:43:13 CEST 2003
 
 	- Interval datetype now fully functional.
+
+Tue Apr  8 14:03:32 CEST 2003
+
+	- Added rstrdate function.
+	- Made Informix mode honor environment variable to set dbname to
+	  connect to.
 	- Set ecpg version to 2.12.0.
 	- Set ecpg library to 3.4.2.
 	- Set pgtypes library to 1.0.0
